# calccli

./: .gitignore  README.md  pyproject.toml
calccli/: __init__.py  main.py
